manifests/kube_service.yml
apiVersion: v1
kind: Service
metadata:
  name: "ingest-service"
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  type: NodePort
  ports:
  # the port that this service should serve on
  - name: ingest-service
    port: 8081
  selector:
    app: "ingest-service-selector"
